<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/home"
        android:enabled="true"
        android:icon="@drawable/home"
        android:title="@string/home" />

    <item
        android:id="@+id/books"
        android:enabled="true"
        android:icon="@drawable/bibliotheque_avec_books"
        android:title="@string/books"/>

    <item
        android:id="@+id/sales"
        android:enabled="true"
        android:icon="@drawable/panier_achat"
        android:title="@string/sale"/>

    <item
        android:id="@+id/user_profile"
        android:enabled="true"
        android:icon="@drawable/profil"
        android:title="@string/profile"/>

    <!-- Our invisible item, taken from
    https://stackoverflow.com/questions/44498537/set-no-item-pre-selected-in-bottom-navigation-view
    -->

    <item
        android:id="@+id/default_selected"
        android:visible="false"
        android:enabled="false"
        />
</menu>
