<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:id="@+id/scroll_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="10dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/bottom_navigation">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/email_field"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="87dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="88dp"
                android:layout_marginBottom="10dp"
                android:autofillHints="Email"
                android:ems="10"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                app:layout_constraintBottom_toTopOf="@+id/password1_field"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/username_field" />

            <EditText
                android:id="@+id/username_field"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="87dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="88dp"
                android:layout_marginBottom="10dp"
                android:autofillHints="Username"
                android:ems="10"
                android:hint="@string/username"
                android:inputType="textPersonName"
                app:layout_constraintBottom_toTopOf="@+id/email_field"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/password1_field"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="87dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="88dp"
                android:layout_marginBottom="10dp"
                android:autofillHints="Password1"
                android:ems="10"
                android:hint="@string/password"
                android:inputType="textPassword"
                app:layout_constraintBottom_toTopOf="@+id/password2_field"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/email_field" />

            <EditText
                android:id="@+id/password2_field"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="87dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="88dp"
                android:layout_marginBottom="10dp"
                android:autofillHints="Password2"
                android:ems="10"
                android:hint="@string/confirm_password"
                android:inputType="textPassword"
                app:layout_constraintBottom_toTopOf="@+id/button_reg"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/password1_field" />

            <Button
                android:id="@+id/button_reg"
                style="@style/Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="151dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="152dp"
                android:text="@string/register"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/password2_field" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:labelVisibilityMode="labeled"
        app:layout_constraintBottom_toBottomOf="parent"
        app:menu="@menu/bottom_navigation_menu" />

</androidx.constraintlayout.widget.ConstraintLayout>